# ServerManager

./: CMakeLists.txt  README.en.md  README.md  code.txt  init_database.sql  setup_ubuntu.sh  start.md  summary.md
claudedocs/: action_checklist.md  optimization_recommendations.md  ubuntu_setup_guide.md
resources/: resources.qrc  style.qss
src/: addwindow.cpp  addwindow.h  addwindow.ui  boardwindow.cpp  boardwindow.h  boardwindow.ui  imitatewindow.cpp  imitatewindow.h  imitatewindow.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
